--- a/style.css
+++ b/style.css
@@ -29,12 +29,11 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
+    width:100%;
     font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
 .button2 {
@@ -45,12 +44,11 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
-    font-size: 100%;
+    width:100%;
+    font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
 .button3 {
@@ -61,12 +59,11 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
-    font-size: 100%;
+    width:100%;
+    font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
 .button4 {
@@ -77,12 +74,11 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
-    font-size: 100%;
+    width:100%;
+    font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
 .button5 {
@@ -93,12 +89,11 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
-    font-size: 100%;
+    width:100%;
+    font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
 .button5 {
@@ -109,12 +104,11 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
-    font-size: 100%;
+    width:100%;
+    font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
 .button6 {
@@ -125,12 +119,11 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
-    font-size: 100%;
+    width:100%;
+    font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
 .button7 {
@@ -141,12 +134,11 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
-    font-size: 100%;
+    width:100%;
+    font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
 .button8 {
@@ -157,12 +149,11 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
-    font-size: 100%;
+    width:100%;
+    font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
 .button9 {
@@ -173,12 +164,11 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
-    font-size: 100%;
+    width:100%;
+    font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
 .button10 {
@@ -189,12 +179,11 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
-    font-size: 100%;
+    width:100%;
+    font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
 .button11 {
@@ -205,11 +194,10 @@ p {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width:50%;
-    font-size: 100%;
+    width:100%;
+    font-size: 50px;
     border-radius: 8px;
     text-align:center;
     margin-top:1%;
-    margin-left:25%;
     margin bottom:1%;
 }
