--- a/style.css
+++ b/style.css
@@ -14,190 +14,43 @@ h1 {
 
 p {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 16px;
+	font-size: 100%;
+	font:white;
 	font-style: normal;
 	font-variant: small-caps;
 	font-weight: normal;
 	line-height: 100%;
 }
+a {
+    text-decoration:none;
+    color:white;
+}
 
 .button1 {
-    background-color: #DD0030;
-    border: none;
-    color: white;
-    padding: 15px 32px;
+    line-height:20%;
+    border:none;
     text-align: center;
-    text-decoration: none;
+    color:white;
     display: inline-block;
     width:100%;
-    font-size: 50px;
+    font-size:40px;
     border-radius: 8px;
-    text-align:center;
     margin-top:1%;
-    margin bottom:1%;
+    margin-bottom:1%;
+    margin-left:0%;
+    margin-right:0%;
 }
 .button2 {
-    background-color: #E57D05;
-    border: none;
-    color: white;
-    padding: 15px 32px;
+    line-height:20%;
+    border:none;
     text-align: center;
-    text-decoration: none;
+    color:white;
     display: inline-block;
-    width:100%;
-    font-size: 50px;
+    width:80%;
+    font-size:40px;
     border-radius: 8px;
-    text-align:center;
     margin-top:1%;
-    margin bottom:1%;
-}
-.button3 {
-    background-color: #F2B700;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width:100%;
-    font-size: 50px;
-    border-radius: 8px;
-    text-align:center;
-    margin-top:1%;
-    margin bottom:1%;
-}
-.button4 {
-    background-color: #0AA275;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width:100%;
-    font-size: 50px;
-    border-radius: 8px;
-    text-align:center;
-    margin-top:1%;
-    margin bottom:1%;
-}
-.button5 {
-    background-color: #7CB854;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width:100%;
-    font-size: 50px;
-    border-radius: 8px;
-    text-align:center;
-    margin-top:1%;
-    margin bottom:1%;
-}
-.button5 {
-    background-color: #3465AA;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width:100%;
-    font-size: 50px;
-    border-radius: 8px;
-    text-align:center;
-    margin-top:1%;
-    margin bottom:1%;
-}
-.button6 {
-    background-color: #7C378A;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width:100%;
-    font-size: 50px;
-    border-radius: 8px;
-    text-align:center;
-    margin-top:1%;
-    margin bottom:1%;
-}
-.button7 {
-    background-color: #B10057;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width:100%;
-    font-size: 50px;
-    border-radius: 8px;
-    text-align:center;
-    margin-top:1%;
-    margin bottom:1%;
-}
-.button8 {
-    background-color: #00A2FF;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width:100%;
-    font-size: 50px;
-    border-radius: 8px;
-    text-align:center;
-    margin-top:1%;
-    margin bottom:1%;
-}
-.button9 {
-    background-color: #000000;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width:100%;
-    font-size: 50px;
-    border-radius: 8px;
-    text-align:center;
-    margin-top:1%;
-    margin bottom:1%;
-}
-.button10 {
-    background-color: #58585A;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width:100%;
-    font-size: 50px;
-    border-radius: 8px;
-    text-align:center;
-    margin-top:1%;
-    margin bottom:1%;
-}
-.button11 {
-    background-color: #E9E9EA;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width:100%;
-    font-size: 50px;
-    border-radius: 8px;
-    text-align:center;
-    margin-top:1%;
-    margin bottom:1%;
+    margin-bottom:1%;
+    margin-left:10%;
+    margin-right:10%;
 }
