--- a/style.css
+++ b/style.css
@@ -30,3 +30,20 @@ p {
     margin-left:5%;
     margin-right:5%;
 }
+.button2 {
+    line-height: 100%;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    width:90%;
+    font-size: 14px;
+    border-radius: 8px;
+    margin-top:1%;
+    margin-left:5%;
+    margin-right:5%;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-variant: normal;
+}
