--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ p {
     line-height: 100%;
     border: none;
     color: white;
-    text-align: center;
+    text-align: left;
     text-decoration: none;
     display: inline-block;
     width:90%;
