--- a/style.css
+++ b/style.css
@@ -47,3 +47,20 @@ p {
 	font-style: normal;
 	font-variant: normal;
 }
+.button2 {
+    line-height: 100%;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    width:90%;
+    font-size: 100px;
+    border-radius: 8px;
+    margin-top:1%;
+    margin-left:5%;
+    margin-right:5%;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-variant: normal;
+}
