--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ p {
     text-decoration: none;
     display: inline-block;
     width:90%;
-    font-size: 30px;
+    height:80%;
     border-radius: 8px;
     margin-top:1%;
     margin-left:5%;
@@ -55,7 +55,7 @@ p {
     text-decoration: none;
     display: inline-block;
     width:90%;
-    font-size: 50px;
+    height:20%;
     border-radius: 8px;
     margin-top:1%;
     margin-left:5%;
