--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ p {
     display: inline-block;
     width:90%;
     height:20%;
+    font-size: 50px;
     border-radius: 8px;
     margin-top:1%;
     margin-left:5%;
