--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ p {
     display: inline-block;
     width:90%;
     height:80%;
+    font-size: 30px;
     border-radius: 8px;
     margin-top:1%;
     margin-left:5%;
