--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ p {
     text-decoration: none;
     display: inline-block;
     width:90%;
+    height:75%;
     font-size: 20px;
     border-radius: 8px;
     margin-top:1%;
