--- a/style.css
+++ b/style.css
@@ -3,11 +3,6 @@ img {
     display: block;
     margin: auto;
 }
-img1 {
-    width:100%;
-    display: block;
-    margin: auto;
-}
 
 a {
     text-decoration: none;
@@ -69,4 +64,14 @@ p {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-style: normal;
 	font-variant: normal;
+}
+
+div1
+{
+width:900%
+}
+
+div2
+{
+    height:20%;
 }
