--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ p {
     position: absolute;
     top: 95%;
     left: 50%;
+    max-width:80%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     background-color: transparent;
